0.6.1 - multiple diagrams