@@ -6,61 +6,33 @@ import java.util.stream.Collectors;
 
 import org.apache.jena.rdf.model.Literal;
 import org.apache.jena.rdf.model.Property;
-import org.apache.jena.rdf.model.RDFList;
 import org.apache.jena.rdf.model.RDFNode;
 import org.apache.jena.rdf.model.Resource;
-import org.topbraid.shacl.vocabulary.SH;
 
 import fr.sparna.rdf.shacl.doc.read.PropertyShapeDocumentationBuilder;
 
 public class ConstraintValueReader { 
 
-	@Deprecated
-	public String readValueconstraint(Resource constraint,Property property, String lang) {
-		
-		String value=null;
-		try {
-			if (constraint.hasProperty(property)) {
-				if (constraint.getProperty(property).getObject().isURIResource()) {
-					value = constraint.getModel().shortForm(constraint.getProperty(property).getResource().getURI());
-				} else if (
-						lang != null
-						&&
-						constraint.listProperties(property, lang).toList().size() > 0
-				) {
-					value = constraint.listProperties(property, lang).toList().stream()
-							.map(s -> s.getObject().asLiteral().getLexicalForm())
-							.collect(Collectors.joining(", "));
-					// value = constraint.getProperty(property).getObject().asLiteral().toString();
-				} else if (lang != null) {
-					//value = constraint.getProperty(property).getObject().asLiteral().toString();
-					value = constraint.getProperty(property).getLiteral().getString();
-				} else if (
-						lang == null
-						&&
-						constraint.getProperty(property).getObject().isLiteral()
-				) {
-					//value = constraint.getProperty(property).getObject().asLiteral().toString();
-					value = constraint.getModel().shortForm(constraint.getProperty(property).getLiteral().getString());
-				} 
-				else if (constraint.getProperty(property).getObject().isAnon()) {
-					value = renderShaclPropertyPath(constraint.getProperty(property).getObject().asResource());
-				}
-			}
-		} catch (Exception e) {
-			value = null;
-		}
-		return value;
-	}
 	
+	/**
+	 * Reads a Literal in a specific language, and returns all values as a List
+	 */
 	public static List<Literal> readLiteralInLang(Resource constraint, Property property, String lang) {
 		if (constraint.hasProperty(property)) {
-			if (lang != null && constraint.listProperties(property, lang).toList().size() > 0) {
-				return constraint.listProperties(property, lang).toList().stream()
-						.map(s -> s.getObject().asLiteral())
-						.collect(Collectors.toList());
-			} else if(constraint.listProperties(property).toList().size() > 0) {
-				// even if lang was provided, we still search the property with no language
+			if(lang != null) {
+				// we asked for an explicit language
+				if(constraint.listProperties(property, lang).toList().size() > 0) {
+					return constraint.listProperties(property, lang).toList().stream()
+							.map(s -> s.getObject().asLiteral())
+							.collect(Collectors.toList());
+				} else {
+					// also look for values with no language
+					return constraint.listProperties(property, "").toList().stream()
+							.map(s -> s.getObject().asLiteral())
+							.collect(Collectors.toList());
+				}
+			} else {
+				// we didn't asked for a specific language, search any property value
 				return constraint.listProperties(property).toList().stream()
 						.map(s -> s.getObject().asLiteral())
 						.collect(Collectors.toList());
@@ -70,10 +42,16 @@ public class ConstraintValueReader {
 		return null;
 	}
 	
+	/**
+	 * Reads a Literal in a specific language, and returns all values concatenated as a single String
+	 */
 	public static String readLiteralInLangAsString(Resource r, Property property, String lang) {
 		return PropertyShapeDocumentationBuilder.render(readLiteralInLang(r, property, lang), true);
 	}
 	
+	/**
+	 * Reads all values of the given property, either as Resources or as Literal in a specific language
+	 */
 	public static List<RDFNode> readObjectAsResourceOrLiteralInLang(Resource r, Property property, String lang) {
 		if(r.hasProperty(property)) {
 			List<RDFNode> result = new ArrayList<RDFNode>();
@@ -89,51 +67,16 @@ public class ConstraintValueReader {
 		
 		return null;
 	}
-
 	
-	public static String renderShaclPropertyPath(Resource r) {
-		if(r == null) return "";
-		
-		if(r.isURIResource()) {
-			return r.getModel().shortForm(r.getURI());
-		} else if(r.hasProperty(SH.alternativePath)) {
-			Resource alternatives = r.getPropertyResourceValue(SH.alternativePath);
-			RDFList rdfList = alternatives.as( RDFList.class );
-			List<RDFNode> pathElements = rdfList.asJavaList();
-			return pathElements.stream().map(p -> renderShaclPropertyPath((Resource)p)).collect(Collectors.joining("|"));
-		} else if(r.hasProperty(SH.inversePath)) {
-			Resource value = r.getPropertyResourceValue(SH.inversePath);
-			if(value.isURIResource()) {
-				return "^"+renderShaclPropertyPath(value);
-			}
-			else {
-				return "^("+renderShaclPropertyPath(value)+")";
-			}
-		} else if(r.hasProperty(SH.zeroOrMorePath)) {
-			Resource value = r.getPropertyResourceValue(SH.zeroOrMorePath);
-			if(value.isURIResource()) {
-				return renderShaclPropertyPath(value)+"*";
-			}
-			else {
-				return "("+renderShaclPropertyPath(value)+")*";
-			}
-		} else if(r.hasProperty(SH.oneOrMorePath)) {
-			Resource value = r.getPropertyResourceValue(SH.oneOrMorePath);
-			if(value.isURIResource()) {
-				return renderShaclPropertyPath(value)+"+";
-			}
-			else {
-				return "("+renderShaclPropertyPath(value)+")+";
-			}
-		} else {
-			return null;
+	/**
+	 * Reads all values of the given property as Resources
+	 */
+	public static List<RDFNode> readObjectAsResource(Resource r, Property property) {
+		if(r.hasProperty(property)) {
+			return r.listProperties(property).toList().stream().map(s -> s.getObject()).collect(Collectors.toList());
 		}
+		
+		return null;
 	}
-	
-	public static List<RDFNode> asJavaList( Resource resource ) {
-	  return (resource.as( RDFList.class )).asJavaList();
-	}
-	
-	
 	
 }
